--- a/src/component/Nav.css
+++ b/src/component/Nav.css
@@ -7,7 +7,7 @@ div{
     
 }
 div>p{
-    background-color: #666;
+    background-color: #333;
     text-align: center;
     color: #fff;
     padding: 10px 0;
@@ -17,8 +17,9 @@ div>p{
 .nav{
     display: flex;
     justify-content: space-between;
-    padding: 30px 50px;
+    padding: 20px 50px;
     align-items: center;
+    /* background-color: green; */
 }
 .nav>h1{
     font-size: 30px;
